--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -33,5 +33,5 @@ jobs:
           uses: actions/upload-artifact@v1
           if: always()
           with:
-            name: RunKWIf
+            name: BuiltIn
             path: ${{ github.workspace }}/reports
