--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -40,6 +40,6 @@ jobs:
       needs: Lint
       steps:
       - name: TestTaurus
-        uses: actions/taurus-action@master
+        uses: actions/taurus-action@v0.1-beta
         with:
           taurus_project_folder_name: 'Exemplos'
