--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -42,4 +42,4 @@ jobs:
       - name: TestTaurus
         uses: Rbillon59/taurus-action@v0.1-beta
         with:
-          taurus_project_folder_name: 'Exemplos'
+          taurus_project_folder_name: 'Exemplos/taurus.yml'
