--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -43,3 +43,4 @@ jobs:
         uses: Rbillon59/taurus-action@v0.1-beta
         with:
           taurus_project_folder_name: 'Exemplos'
+          taurus_command_line: 'taurus.yml'
