--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -42,5 +42,5 @@ jobs:
       - name: TestTaurus
         uses: Rbillon59/taurus-action@v0.1-beta
         with:
-          taurus_project_folder_name: 'Exemplos'
-          taurus_command_line: 'taurus.yml'
+          taurus_project_folder_name: '/Exemplos'
+          taurus_command_line: '/taurus.yml'
