--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -35,4 +35,28 @@ jobs:
           with:
             name: BuiltIn
             path: ${{ github.workspace }}/reports
-
+   Mobile:
+        runs-on: ubuntu-latest
+        needs: Lint
+        steps:   
+          - uses: actions/checkout@v2
+          - name: Checkout
+            uses: actions/checkout@v2
+          - name: Install and Run Appium Server
+            uses: moatazeldebsy/appium-server-gitHub-action@V1.0.4
+          - name: Create folder for reports
+            run:  mkdir -m 777 reports
+          - name: Execute Robot tests
+            uses: carlosnizolli/robotframework-docker-action@browser
+            env:
+              DOCKER_SHM_SIZE: 11000000
+              ROBOT_TESTS_DIR: ${{ github.workspace }}/Exemplos/Appium/tests.robot
+              ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
+              ROBOT_OPTIONS: "--name Mobile"
+              
+          - name: Upload test to artifact
+            uses: actions/upload-artifact@v1
+            if: always()
+            with:
+              name: Mobile
+              path: ${{ github.workspace }}/reports
