--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -40,8 +40,24 @@ jobs:
         needs: Lint
         steps:   
           - uses: actions/checkout@v2
+          
+          - name: Set up Python
+            uses: actions/setup-python@v2
+            with:
+              python-version: "3.9.1"
+              architecture: "x64"
+
+          - name: Set up JDK 1.8
+            uses: actions/setup-java@v1
+            with:
+              java-version: 1.8
+
+          - name: Setup Android SDK
+            uses: android-actions/setup-android@v2   
+            
           - name: Install and Run Appium Server
             uses: moatazeldebsy/appium-server-gitHub-action@V1.0.4
+            
           - name: Create folder for reports
             run:  mkdir -m 777 reports
           - name: Execute Robot tests
