--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -46,7 +46,12 @@ jobs:
             with:
               python-version: "3.9.1"
               architecture: "x64"
-
+              
+          - name: Yarn Install
+            uses: actions/setup-node@v1
+            with:
+                node-version: 12.x     
+            
           - name: Set up JDK 1.8
             uses: actions/setup-java@v1
             with:
@@ -56,7 +61,9 @@ jobs:
             uses: android-actions/setup-android@v2   
             
           - name: Install and Run Appium Server
-            uses: moatazeldebsy/appium-server-gitHub-action@V1.0.4
+            run: |
+              npm install -g appium
+              appium
             
           - name: Create folder for reports
             run:  mkdir -m 777 reports
