--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -63,7 +63,7 @@ jobs:
           - name: Install and Run Appium Server
             run: |
               npm install -g appium
-              appium &>/dev/null &
+              appium
             
           - name: Create folder for reports
             run:  mkdir -m 777 reports
