--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -64,8 +64,15 @@ jobs:
             run: |
               npm install -g appium
               appium &
-          - name: "Run UI Tests"
-            uses: faruktoptas/android-github-actions-emulator@latest   
+              
+          - name: checkout
+            uses: actions/checkout@v3
+
+          - name: run tests
+            uses: reactivecircus/android-emulator-runner@v2
+            with:
+              api-level: 29
+              script: ./gradlew connectedCheck
             
           - name: Create folder for reports
             run:  mkdir -m 777 reports
