--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -37,6 +37,9 @@ jobs:
             path: ${{ github.workspace }}/reports
    Mobile:
         runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            api-level: [21, 23, 29]
         needs: Lint
         steps:   
           - uses: actions/checkout@v2
@@ -60,13 +63,27 @@ jobs:
           - name: Setup Android SDK
             uses: android-actions/setup-android@v2   
             
-          - name: Install and configure emulator   
-            run: |
-              sdkmanager “platforms;android-28”
-              sdkmanager “system-images;android-28;default;x86”
-              sdkmanager “build-tools;28.0.3”
-              avdmanager create avd — name android28 — package “system-images;android-28;default;x86”
-              emulator -avd android28
+          - name: Gradle cache
+            uses: gradle/gradle-build-action@v2
+        
+          - name: AVD cache
+            uses: actions/cache@v3
+            id: avd-cache
+            with:
+              path: |
+                ~/.android/avd/*
+                ~/.android/adb*
+              key: avd-${{ matrix.api-level }}
+
+          - name: create AVD and generate snapshot for caching
+            if: steps.avd-cache.outputs.cache-hit != 'true'
+            uses: reactivecircus/android-emulator-runner@v2
+            with:
+              api-level: ${{ matrix.api-level }}
+              force-avd-creation: false
+              emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+              disable-animations: false
+              script: echo "Generated AVD snapshot for caching."
                
           - name: Install and Run Appium Server
             run: |
