--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -72,7 +72,8 @@ jobs:
                -k "system-images;android-22;default;x86_64"\
                --device "Nexus 5"\
                --sdcard 100M 
-               
+              avdmanager list device
+              
           - name: Install and Run Appium Server
             run: |
               npm install -g appium
