--- a/.github/workflows/rf-exemplos.yml
+++ b/.github/workflows/rf-exemplos.yml
@@ -71,7 +71,7 @@ jobs:
                -k "system-images;android-22;default;x86_64"\
                --device "Nexus 5"\
                --sdcard 100M 
-              avdmanager list device --verbose
+              avdmanager --verbose list device 
               
           - name: Install and Run Appium Server
             run: |
